<resources>
    <string name="rewarder_ad_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="app_name">CASINO ONLINE</string>
    <string name="login">Inicio Sesion</string>
    <string name="changeAdRewardButton">Cambiar Recompensa Anuncios</string>
    <string name="comprarServicio">Comprar</string>
    <string name="addServiceComment">Añadir Comentario</string>
    <string name="comments">Comentarios</string>
    <string name="loginWithGoogle">Inicio Sesion Google</string>
    <string name="loginWithFacebook">Inicio Sesion Facebook</string>
    <string name="registro">Registrarse</string>
    <string name="hintEmail">Escribe tu email</string>
    <string name="hintChangeAdsRwards">Ads Reward</string>
    <string name="hintnameAddProduct">Nombre del Producto</string>
    <string name="hintdescriptionAddProduct">Descripción del producto</string>
    <string name="hintunidadesAddProduct">Unidades del Producto</string>
    <string name="hintpriceAddProduct">Precio del Producto</string>
    <string name="hintSaldoSlotMachine">Saldo a usar</string>
    <string name="hintAddProductImage">Añadir Imagen</string>
    <string name="hintAddProduct">Añadir Producto</string>
    <string name="hintPassword">Escribe tu Contraseña</string>
    <string name="launchRuletteReady">Aún no está la ruleta lista para lanzar de nuevo, espera a que se resetee el timer, gracias</string>
    <string name="hintRepeatPassword">Escribe de nuevo la Contraseña</string>
    <string name="hintDniPassword">dni/nif</string>
    <string name="informationGeneral">Información General</string>
    <string name="informationRullete">Información Ruleta</string>
    <string name="InformationSlotMachine">Información TragaPerras</string>
    <string name="InformationBlackjack">Información BlackJack</string>
    <string name="apostar">Apostar</string>
    <string name="cerrar">Cerrar</string>
    <string name="hintName">Nombre</string>
    <string name="skip_information">Pasar Ayuda</string>
    <string name="volver">Volver</string>
    <string name="hasPerdido">Has perdido, te pasaste de 21, vuelve a apostar y prueba de nuevo</string>
    <string name="hintDireccion">Direccion</string>
    <string name="cardNotTouched">Debes dar la vuelta a la carta que acabas de sacar antes de sacar otra</string>
    <string name="blackjackBid">Apuesta Blackjack</string>
    <string name="hintLastName">Apellidos</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="volver_registro">Inicio de Sesion</string>
    <string name="error_repeatPassword_register">Las contraseñas no coinciden</string>
    <string name="error_dni_register">El dni no es correcto comprueba el formato</string>
    <string name="error_apellidos_register">Rellena el campo Apellidos</string>
    <string name="error_name_register">Rellena el campo nombre</string>
    <string name="error_password_register">La contraseña debe tener un mínimo de 6 carácteres</string>
    <string name="error_email_register">Rellena el campo del email , no puede estar vacío</string>
    <string name="error_password_login">Rellena el campo de la contraseña , no puede estar vacío</string>
    <string name="apuestaEmpty">Rellena el campo de la apuesta , gracias</string>
    <string name="email_verfication_tittle">Verificación Email \n Pulsa el Enlace Enviado A Tu Correo</string>
    <string name="verificar_email_button">Reenviar Correo Verificación</string>
    <string name="title_activity_cosas">cosasActivity</string>
    <string name="titlte_spinner">Selecciona Un Pais</string>
    <string name="prefs_login">com.rubenbarrosoblazquez.CasinoOnlineTFG.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_casino">CasinoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_send">Tu cuenta no está verificada comprueba tu correo , y valida tu cuenta</string>
    <string name="email_Verified">Tu Email ya ha sido validado, redireccionando a la siguiente página</string>
    <string name="menu_rule">Ruleta</string>
    <string name="menu_init">Inicio</string>
    <string name="menu_tab_serv_games">Ruleta</string>
    <string name="menu_tab_serv_slotMachine">TragaPerras</string>
    <string name="menu_tab_serv_black">BlackJack</string>
    <string name="menu_tab_profile">Perfil</string>
    <string name="menu_tab_basket">Compras</string>
    <string name="menu_tab_sev_prod">Productos</string>
    <string name="menu_tragaperras">TragaPerras</string>
    <string name="menu_blackjack">BlackJack</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_admin_send_noti">Enviar Notificaciones</string>
    <string name="menu_admin_add_product">Añadir Producto</string>
    <string name="menu_admin_change_ad_reward">Cambiar Recompensa Anuncios</string>
    <string name="saldo_actual">Saldo Actual De La Cuenta :</string>
    <string name="saldo_actual_perfil">Saldo</string>
    <string name="numero_sacado">Ha Salido El Número ....</string>
    <string name="ganarDinero">Has Ganado ...</string>
    <string name="numeros_recientes">Últimos Números Sacados</string>
    <string name="no_se_puede_apostar">LAS APUESTAS ESTÁN PARADAS, NO PUEDES APOSTAR MIENTRAS LA RULETA ESTÁ GIRANDO</string>
    <string name="apuestaactual">APUESTA ACTUAL</string>
    <string name="seleccionaMoneda">Antes de apostar selecciona una moneda</string>
    <string name="noSaldoParaApostar">No puedes apostar si no tienes el saldo suficiente, consigue saldo y prueba de nuevo</string>
    <string name="apuestaCero">No puedes apostar una cantidad menor o igual a 0</string>
    <string name="noSaldoParaComprar">No puedes comprar nada si no tienes el saldo suficiente, consigue saldo y prueba de nuevo</string>
    <string name="compraRealizada">Compra Realizada correctamente, Para más Información ve a Perfil --> Compras</string>
    <string name="tiradasSeguidas">No puedes tirar 2 veces seguidas, espera a obtener el resultado de la tirada anterior</string>
    <string name="orderByDateDesc">Ordenar Por Fecha Ascendente</string>
    <string name="orderByDateAsc">Ordenar Por Fecha Descendente</string>
    <string name="filtro">Filtrar por .....</string>
    <string name="orderByName">Ordenar por Nombre</string>
    <string name="orderByPriceAsc">Ordenar Por Precio Ascendente</string>
    <string name="orderByPriceDesc">Ordenar Por Precio Descendente</string>
    <string name="ver_anuncio">Obtener saldo con anuncios</string>
    <string name="opciones_perfil_menu">Opciones Perfil</string>
    <string name="saldo_perfil_menu_item">Saldo Actual : </string>
    <string name="profile_options_menu_item">Configurar Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_anuncio_menu_item">Obtener Saldo Gratis</string>
    <string name="textoDatosPersonales">Datos Personales</string>
    <string name="tituloFragmentEnviarNoti">Enviar Notificación a Usuarios</string>
    <string name="tituloFragmentAddProduct">Añadir Productos</string>
    <string name="tituloChangeAdsRewards">Cambiar Recompensa Anuncios</string>
    <string name="tituloNotificacion">Titulo de la notificación</string>
    <string name="contenidoNotificacion">Contenido de la notificación</string>
    <string name="enviarNotificacion">Enviar Notificación a Usuarios</string>
    <string name="añadirProducto">Añadir Producto</string>
    <string name="servicioJuegosRuleta">Servicios Juegos Ruleta</string>
    <string name="rellenaCampos">Todos los campos deben estar completados</string>
    <string name="productImageSaved">Producto Registrado Correctamente</string>
    <string name="productImageSavedError">Fallo al registrar el producto</string>
    <string name="servicioJuegoBlackjack">Servicios Juego BlackJack</string>
    <string name="servicioJuegosTragaperras">Servicios Juegos Tragaperras</string>
    <string name="servicioJuegosVarios">Servicios Juegos Varios</string>
    <string name="servicioJuegosRuletaEditText">Buscar Servicio Juego Ruleta</string>
    <string name="servicioJuegosBlackJackEditText">Buscar Servicio Juego Black Jack</string>
    <string name="servicioJuegosTragaperrasEditText">Buscar Servicio Juego Tragaperras</string>
    <string name="plantarse">Me Planto</string>
    <string name="SacarCarta">Sacar Otra Carta</string>
    <string name="servicioJuegosVariosEditText">Buscar Servicio Juegos Vario</string>
    <string name="añadirComentarioBoton">Añadir Comentario</string>
    <string name="teHasPlantado">No puedes sacar más cartas , te has plantado!</string>
    <string name="hintContenidoComentarioDialogo">Comentario</string>
    <string name="BotonComentarioDialogo">Añadir Comentario</string>
    <string name="codePhoneSent">Código Verificación telefono enviado</string>
    <string name="codePhoneSentError">Error al enviar el código de verificación de teléfono</string>
    <string name="codePhoneSentVerified">Teléfono Verificado</string>
    <string name="debesApostarBlackjack">Para poder jugar debes dar al icono de la parte superior derecha, y realizar tu apuesta, una vez realizada, comenzará el juego</string>
    <string name="phoneAlreadyVerified">Teléfono ya verificado</string>
    <string name="noPhone">No hay un teléfono disponible, añádelo y actualiza tus datos</string>
    <string name="VerifiedPhoneNumberCodeHint">Codigo Verificación SMS</string>
    <string name="funcionalidadNoImplementada">Actualmente no está implementada esta funcionalidad, disculpe las molestias</string>
    <string name="dniNoValido">Foto Dni no válida, recuerda que debe ser una foto realizada en vertical, no horizontal, gracias</string>
    <string name="dniNoValidated">Antes de poder jugar debes validar tu dni, ve a la pestaña de perfil, actualiza tus datos con tu dni, y valídalo con una foto del mismo</string>
    <string name="setSlotMachineBet">Antes de poder tirar, establece una apuesta</string>
    <string name="wantSkip">¿Quieres que no te vuelva a salir esta información?</string>
    <string name="infoGeneral1">¿Cómo Desplegar el menú?</string>
    <string name="infoRuleta1">¿Cómo Empezar A Jugar?</string>
    <string name="infoRuleta2">Lo Primero es que debes tener saldo, si no tienes el saldo suficiente no podrás apostar, para apostar deberás pulsar el icono de las monedas, donde se abrirá un diálogo con unas monedas las cuales pulsas, y una vez pulsada, podrás apostar a los números que hay en el díalogo, un vez acabes de apostar a los números deberás dar al botón de apostar, si no estás seguro, le das a cancelar</string>
    <string name="infoRuleta3">Una Vez realizada la apuesta tendrás que esperar los segundos restantes para que gire la ruleta, o puedes dar al botón superior derecho el cual lanza la ruleta directamente sin esperar los segundos que queden</string>
    <string name="infoRuleta4">¿Cómo Puedo Ver Mi Apuesta Realizada una vez apostada?</string>
    <string name="infoRuleta5">En la parte inferior de la ruleta tendrás un texto que pone el total de la apuesta actual que tienes realizada, y al lado de este, tienes una flecha, al pulsar en la flecha tendrás desglosado todas las apuestas realizadas, y desde ahí podrás quitar apuestas de las que no te sientas agusto, una vez empieze a girar la ruleta todo quedará bloqueado</string>
    <string name="infoRuleta6">¿Cuánto me dan por ganar?</string>
    <string name="infoRuleta7">Si aciertas un te dará lo que has apostado x36, ya que hay 36 números , y luego si apuestas al 1/3 , 2/3 , 3/3, si aciertas ganarás un x2 de lo que has apostado</string>
</resources>