<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grid_background"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_dialog_shape"
        android:fontFamily="@font/parmapetitoutline"
        android:padding="5dp"
        android:text="@string/opciones_perfil_menu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextosaldoActualMenuPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/parmapetitoutline"
            android:padding="5dp"
            android:text="@string/saldo_perfil_menu_item"
            android:textSize="30sp"
            android:background="@drawable/text_view_dialog_shape"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/saldoActualPerfilDialogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/parmapetitoutline"
            android:padding="5dp"
            android:text="0"
            android:textSize="30sp"
            android:background="@drawable/text_view_dialog_shape"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/ProfileOptionsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_dialog_shape"
        android:fontFamily="@font/parmapetitoutline"
        android:padding="5dp"
        android:text="@string/profile_options_menu_item"
        android:textSize="30sp"
        android:textColor="@android:color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/ver_add_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_dialog_shape"
        android:fontFamily="@font/parmapetitoutline"
        android:padding="5dp"
        android:text="@string/ver_anuncio_menu_item"
        android:textSize="30sp"
        android:textColor="@android:color/black"/>

</LinearLayout>