<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/text_information_rullete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="2dp"
        android:text="@string/informationRullete"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:fontFamily="@font/bungee"
        android:textSize="18sp"
        android:textStyle="bold|italic">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/infoRuleta1"
                android:textColor="@android:color/black"
                android:fontFamily="@font/bungee"
                android:textSize="13sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:text="@string/infoRuleta2"
                android:textColor="@android:color/black"
                android:fontFamily="@font/parmapetitoutline"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/info_general_photo_6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/info_general_photo_7" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp"
                android:text="@string/infoRuleta3"
                android:textColor="@android:color/black"
                android:fontFamily="@font/parmapetitoutline"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp"
                android:text="@string/infoRuleta4"
                android:textColor="@android:color/black"
                android:fontFamily="@font/bungee"
                android:textSize="13sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:text="@string/infoRuleta5"
                android:textColor="@android:color/black"
                android:fontFamily="@font/parmapetitoutline"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/info_general_photo_6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/info_general_photo_7" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp"
                android:text="@string/infoRuleta6"
                android:textColor="@android:color/black"
                android:fontFamily="@font/bungee"
                android:textSize="13sp"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="2dp"
                android:text="@string/infoRuleta7"
                android:textColor="@android:color/black"
                android:fontFamily="@font/parmapetitoutline"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/info_general_photo_6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/info_general_photo_7" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>