<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:fontFamily="@font/bungee"
            android:padding="10dp"
            android:text="@string/tituloFragmentAddProduct"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hintnameAddProduct"
            app:counterTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"

            android:hint="@string/hintdescriptionAddProduct"
            app:counterTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hintpriceAddProduct"
            app:counterTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hintunidadesAddProduct"
            app:counterTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unidadesProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerTypesAddProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/spinner_custom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">
            <Button
                android:id="@+id/addImageProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hintAddProductImage"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/bungee"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_marginStart="15dp"
                android:id="@+id/imageProductAdd"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/addProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/hintAddProduct"
            android:fontFamily="@font/bungee"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>



    </LinearLayout>

    </ScrollView>

</LinearLayout>
